--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -93,14 +93,14 @@ hr.soften {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.4), 0 0 30px rgba(0,0,0,.075);
-  background: #020031; /* Old browsers */
-  background: -moz-linear-gradient(45deg,  #020031 0%, #6d3353 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#020031), color-stop(100%,#6d3353)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* IE10+ */
-  background: linear-gradient(45deg,  #020031 0%,#6d3353 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#020031', endColorstr='#6d3353',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+  background: #000b9f; /* Old browsers */
+  background: -moz-linear-gradient(45deg,  #000b9f 0%, #6efff3 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#000b9f), color-stop(100%,#6efff3)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(45deg,  #000b9f 0%,#6efff3 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(45deg,  #000b9f 0%,#6efff3 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(45deg,  #000b9f 0%,#6efff3 100%); /* IE10+ */
+  background: linear-gradient(45deg,  #000b9f 0%,#6efff3 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000b9f', endColorstr='#6efff3',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   -webkit-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
      -moz-box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
           box-shadow: inset 0 3px 7px rgba(0,0,0,.2), inset 0 -3px 7px rgba(0,0,0,.2);
@@ -175,7 +175,7 @@ hr.soften {
   bottom: 0;
   left: 0;
   background: url(../img/bs-docs-masthead-pattern.png) repeat center center;
-  opacity: .4;
+  opacity: .7;
 }
 @media
 only screen and (-webkit-min-device-pixel-ratio: 2),
